Overflow fix on the media query for the image

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -1,74 +1,78 @@
-.container{
-    display: flex;
-    justify-content: center;
-    margin: auto;
-    max-width: 1140px;
-
+.container {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  max-width: 1140px;
 }
 
-.container-txt{
-    display: flex;
-    flex-direction: column;
-    flex-basis: auto;
-    background-color: $darkDesatBlue;
-    color: $white;
-    width: 50%;
-    border-radius: 0.5rem 0 0 0.5rem;
-    padding: 4.5rem;
-
+.container-txt {
+  display: flex;
+  flex-direction: column;
+  flex-basis: auto;
+  background-color: $darkDesatBlue;
+  color: $white;
+  width: 50%;
+  border-radius: 0.5rem 0 0 0.5rem;
+  padding: 4.5rem;
 }
 
-.content{
-    max-width: 350px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex-grow: 2;
+.content {
+  max-width: 350px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-grow: 2;
 }
 
-.stats-container{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
+.stats-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
-.stats-numbers{
-    color: $white;
-    font-family: 'Inter', sans-serif;
-    font-weight: 700;
-    font-size: 1.5rem;
+.stats-numbers {
+  color: $white;
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 1.5rem;
 }
 
-.stats-headings{
-    color: $statsHeadings;
-    text-transform: uppercase;
-    font-family: 'Lexend Deca', sans-serif;
-    font-size: 0.85rem;
+.stats-headings {
+  color: $statsHeadings;
+  text-transform: uppercase;
+  font-family: "Lexend Deca", sans-serif;
+  font-size: 0.85rem;
 }
 
-h1{
-    font-family: 'Inter', sans-serif;
-    line-height: 2.70rem;
-    font-size: 2.25rem;
-    margin: 0;
+h1 {
+  font-family: "Inter", sans-serif;
+  line-height: 2.7rem;
+  font-size: 2.25rem;
+  margin: 0;
 }
 
-span{
-    color: $softViolet;
+span {
+  color: $softViolet;
 }
 
-p{
-    color: $paragraph;
-    line-height: 1.5rem;
-    margin-top: 2rem;
+p {
+  color: $paragraph;
+  line-height: 1.5rem;
+  margin-top: 2rem;
 }
 
-.container-img{
-    position: relative;
-    background-color: $softViolet;
-    border-radius: 0 0.5rem 0.5rem 0;
-    overflow: hidden;
-
+.container-img {
+  position: relative;
+  background-color: $softViolet;
+  border-radius: 0 0.5rem 0.5rem 0;
+  overflow: hidden;
+//   background-image: url("../assets/image-header-desktop.jpg");
+//   background-blend-mode: multiply;
+//   width: 100%;
+//   background-size: contain;
+//   background-repeat: no-repeat;
+//   background-color: hsla(277, 64%, 61%, 1);
+//   filter: contrast(0.9);
 }
 
 img{
@@ -78,8 +82,8 @@ img{
     border-radius: inherit;
 }
 
-.mobile-img{
-    display: none;
+.mobile-img {
+  display: none;
 }
 
 .img-overlay{
@@ -94,12 +98,13 @@ img{
 
 }
 
-.attribution{
-    padding: 1rem;
-    color: $paragraph;
-    text-align: center;
+.attribution {
+  padding: 1rem;
+  color: $paragraph;
+  text-align: center;
 }
-a, a:visited{
-    color: $softViolet;
-    text-decoration: none;
+a,
+a:visited {
+  color: $softViolet;
+  text-decoration: none;
 }
