--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -14,7 +14,6 @@
         border-radius: 0.5rem 0.5rem 0 0;
         width: 100%;
         height: auto;
-        overflow: scroll;
     }
     img{
         width: 100%;
